[tool.poetry]
name = "dispenv"
version = "0.1.0"
description = "A CLI tool for creating disposable environments."
authors = ["Peter Baumgartner"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
questionary = "^1.10.0"
wasabi = "^0.9.0"
packaging = "^21.3"
srsly = "^2.4.2"
typer = {extras = ["all"], version = "^0.4.0"}
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
ipython = "7.12.0"
mypy = "^0.931"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dispenv = "dispenv.cli:app"